feat(frontend): implement wallet functionality with transaction history, top-up, and transfer features
- Added WalletPage, WalletCard, TopUpPage, and TransferPage components.
- Integrated TransactionHistory component to display transaction records.
- Enhanced BookingPage to support round trip selections and save functionality.
- Updated Navbar and Footer for branding consistency.
- Modified Dockerfile for database initialization changes.

--- a/infrastructure/postgres/Dockerfile
+++ b/infrastructure/postgres/Dockerfile
@@ -1,8 +1,8 @@
 FROM postgres:17.0
 
 # bootstrap.sh will initialise the database by:
-# - Creating a 'transport_system' user, with password 'transport_system_localdev'
-# - Creating a 'transport_system_localdev' database, owned by this user
+# - Creating a 'transport_system' user, with password 'transport_localdev'
+# - Creating a 'transport_localdev' database, owned by this user
 RUN apt-get update && apt-get install -y gosu && rm -rf /var/lib/apt/lists/*
 COPY scripts/bootstrap.sh .
 COPY scripts/bootstrap.sql .
