--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,25 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_SSL_MODE=${DB_SSL_MODE}
       - DB_URL=${DB_URL}
+      # JazzCash Payment Gateway Configuration
+      - JAZZCASH_MERCHANT_ID=${JAZZCASH_MERCHANT_ID}
+      - JAZZCASH_PASSWORD=${JAZZCASH_PASSWORD}
+      - JAZZCASH_INTEGRITY_SALT=${JAZZCASH_INTEGRITY_SALT}
+      - JAZZCASH_MERCHANT_MPIN=${JAZZCASH_MERCHANT_MPIN}
+      - JAZZCASH_RETURN_URL=${JAZZCASH_RETURN_URL}
+      - JAZZCASH_IS_TEST=${JAZZCASH_IS_TEST}
+      - JAZZCASH_BASE_URL=${JAZZCASH_BASE_URL}
+      - JAZZCASH_WALLET_PAYMENT_URL=${JAZZCASH_WALLET_PAYMENT_URL}
+      - JAZZCASH_STATUS_INQUIRY_URL=${JAZZCASH_STATUS_INQUIRY_URL}
+      - JAZZCASH_CARD_PAYMENT_URL=${JAZZCASH_CARD_PAYMENT_URL}
+      - JAZZCASH_WALLET_REFUND_URL=${JAZZCASH_WALLET_REFUND_URL}
+      - JAZZCASH_CARD_REFUND_URL=${JAZZCASH_CARD_REFUND_URL}
     ports:
       - "${PORT:-8080}:${PORT:-8080}"
+    develop:
+      watch:
+        - path: .
+          action: rebuild
 
 volumes:
   giki_wallet_data:
